<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/dialog_horizontal_padding"
    android:paddingTop="@dimen/dialog_vertical_padding"
    android:paddingEnd="@dimen/dialog_horizontal_padding"
    android:paddingBottom="@dimen/dialog_vertical_padding">

    <TextView
        android:id="@+id/text_history_remove_confirmation_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/remove_from_history_confirmation_title"
        android:textAppearance="?attr/textAppearanceHeadlineSmall"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_history_remove_no"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/no" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_history_remove_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>
